@@ -16,6 +16,7 @@ Changes to 1.0.16
 * Fix LinearRecursiveSequence and allow it to take vector for n
 * Fix crash on uninitialized variables in conjugate transpose
 * Fix derivatives of Im and Re
+* Fix file chooser dialogs not starting in current directory
 * Avoid double error about uninitialized variables
 * Spelling fixes and documentation fixes (me, LucPionchon)
 * Require MPFR at least 2.3.0
